--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "yiisoft/yii2": "*",
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
-        "yiisoft/yii2-imagine": "*"
+        "yiisoft/yii2-imagine": "*",
+        "bower-asset/angular": "1.3.0",
+        "bower-asset/angular-route": "1.3.0"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
